test/scc/expr/semantic-errors/156.t
struct s
{
    int a;
};

void foo(void* p)
{
}

void test()
{
    foo(&s);
}